--- a/concurrent/pom.xml
+++ b/concurrent/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.38</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
     </dependencies>
 
 
